--- a/form.html
+++ b/form.html
@@ -11,10 +11,10 @@
     <h3>this form created html code<h3>
     <form action="" mrthod="post">
         <label for="user_name">test field</label>
-        <input typr="text" name="user_name" value="">
+        <input typr="text" name="user_name" value="" required>
         
         <label for="user_email">user_email</label>
-        <input typr="email" name="user_email" value+"">
+        <input typr="email" name="user_email" placeholder="please enter email">
 
         <input type="submit" name= "submit" value="submit" required>
     </form>
