--- a/form.html
+++ b/form.html
@@ -31,6 +31,8 @@
      <p>name:{{user_name}}</p>
      <p>date of birth :{{user_dob}}</p>
      <p>email: {{user_email}}</p>
+     <p>boolean_field:{{ boolean_field }} </p>
+     <p>char_field :{{ char_field }}</p>
     {% endif %}
 </body>
 </html>
