--- a/form.html
+++ b/form.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-  
+{% comment %} {% extends 'firstapp/base.html' %}
+{% block body_block %}
+
+<h1>I am Form page</h1>
+{% endblock %}  {% endcomment %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
